// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`text-field text field: 0 1`] = `
<input
  className="textfield"
  disabled={null}
  placeholder={null}
  type="text"
/>
`;

exports[`text-field text field: 1 1`] = `
<input
  className="textfield"
  disabled={null}
  placeholder={null}
  type="email"
/>
`;

exports[`text-field text field: 2 1`] = `
<input
  className="textfield"
  disabled={null}
  placeholder={null}
  type="number"
/>
`;

exports[`text-field text field: 3 1`] = `
<input
  className="textfield"
  disabled={null}
  placeholder={null}
  type="tel"
/>
`;
